added state engine

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="left-side">
         <div class="player-choice">
           <h3>PLAYER:</h3>
-          <p>This is where the player choice goes</p>
+          <p id="player-choice">This is where the player choice goes</p>
         </div>
         <div class="button-container">
           <div class="rock-container">
@@ -33,9 +33,7 @@
       <div class="right-side">
         <div class="computer-choice">
           <h3>OPPONENT:</h3>
-          <p id="computer-choice-text">
-            This is where the computer choice goes
-          </p>
+          <p id="computer-choice-text"></p>
           <img
             src="https://pxt.azureedge.net/blob/68f66c3ddc3acfc4c53157abf92eace202d46db2/static/courses/csintro/conditionals/rock-paper-scissors-items.png"
             alt=""
@@ -46,7 +44,7 @@
       <div class="middle-of-page">
         <div class="results">
           <h3>RESULTS:</h3>
-          <p>This is where the winner goes</p>
+          <p id="winner-text">This is where the winner goes</p>
         </div>
 
         <div><button class="play-button">PLAY AGAIN</button></div>
